FEAT: integrate AI chatbot API